# RBniCSx

./: .gitignore  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/: dependabot.yml
.github/actions/jupyter/check_metadata/: check_metadata.py
.github/workflows/: ci.yml  ci_against_releases.yml  pypi.yml  release.yml
docs/: api.rst  conf.py  index.rst
minirox/: __init__.py
minirox/backends/: __init__.py  export.py  functions_list.py  gram_schmidt.py  import_.py  projection.py  proper_orthogonal_decomposition.py  tensors_list.py
minirox/cpp/: __init__.py  compile_code.py  compile_package.py
minirox/cpp/minirox/backends/: frobenius_inner_product.cpp  frobenius_inner_product.h
minirox/cpp/minirox/wrappers/: backends.cpp  minirox.cpp
minirox/io/: __init__.py  on_rank_zero.py  text_box.py  text_line.py  timer.py
minirox/io/utils/: __init__.py  plotting.py
minirox/mesh/: __init__.py  gmsh_to_fenicsx.py
minirox/mesh/utils/: __init__.py  gmsh_to_fenicsx.py
minirox/test/: __init__.py  order_of_magnitude.py
rbnicsx/: __init__.py
rbnicsx/_backends/: __init__.py  export.py  functions_list.py  import_.py  online_tensors.py  projection.py  proper_orthogonal_decomposition.py  tensors_array.py  tensors_list.py
rbnicsx/_cpp/: .gitignore  CMakeLists.txt  __init__.py  compile_code.py  compile_package.py  default_compiler_options_with_dolfinx.py  default_compiler_options_without_dolfinx.py
rbnicsx/_cpp/rbnicsx/_backends/: frobenius_inner_product.cpp  frobenius_inner_product.h  petsc_casters.cpp  petsc_casters.h  petsc_error.cpp  petsc_error.h
rbnicsx/_cpp/rbnicsx/wrappers/: _backends.cpp  rbnicsx.cpp
rbnicsx/backends/: __init__.py  export.py  functions_list.py  gram_schmidt.py  import_.py  mesh_motion.py  projection.py  proper_orthogonal_decomposition.py  symbolic_parameters.py  tensors_array.py  tensors_list.py
rbnicsx/cpp/: __init__.py
rbnicsx/cpp/rbnicsx/backends/: frobenius_inner_product.cpp  frobenius_inner_product.h
rbnicsx/cpp/rbnicsx/wrappers/: backends.cpp  rbnicsx.cpp
rbnicsx/io/: __init__.py  on_rank_zero.py  text_box.py  text_line.py  timer.py
rbnicsx/online/: __init__.py  export.py  functions_list.py  gram_schmidt.py  import_.py  projection.py  proper_orthogonal_decomposition.py  tensors.py  tensors_array.py  tensors_list.py
rbnicsx/test/: __init__.py  order_of_magnitude.py
tests/: requirements.txt
tests/notebooks/: conftest.py
tests/notebooks/data/: xfail_final_cell_all_processes.ipynb  xfail_final_cell_some_processes.ipynb  xfail_intermediate_cell_all_processes.ipynb  xfail_intermediate_cell_some_processes.ipynb  z_success_after_failures.ipynb
tests/unit/: conftest.py
tests/unit/_cpp/: test_compile_cpp.py
tests/unit/_cpp/_backends/: test_frobenius_inner_product.py
tests/unit/backends/: conftest.py  test_backends_export_import.py  test_backends_functions_list.py  test_backends_gram_schmidt.py  test_backends_mesh_motion.py  test_backends_projection.py  test_backends_proper_orthogonal_decomposition.py  test_backends_symbolic_parameters.py  test_backends_tensors_array.py  test_backends_tensors_list.py  test_export_import.py  test_functions_list.py  test_gram_schmidt.py  test_mesh_motion.py  test_projection.py  test_proper_orthogonal_decomposition.py  test_symbolic_parameters.py  test_tensors_list.py  utils.py
tests/unit/cpp/: test_compile_cpp.py  test_cpp_library.py
tests/unit/io/: test_on_rank_zero.py  test_plotting.py  test_text_box.py  test_text_line.py  test_timer.py
tests/unit/io/utils/: test_plotting.py
tests/unit/mesh/: test_gmsh_to_fenicsx.py
tests/unit/mesh/utils/: test_gmsh_to_fenicsx.py
tests/unit/online/: test_online_export_import.py  test_online_functions_list.py  test_online_gram_schmidt.py  test_online_projection.py  test_online_proper_orthogonal_decomposition.py  test_online_tensors.py  test_online_tensors_array.py  test_online_tensors_list.py
tests/unit/test/: test_order_of_magnitude.py
tutorials/: .gitignore  .imports.ipynb  00_README.ipynb  01_thermal_block.ipynb  02_elastic_block.ipynb  03_hole.ipynb  04_graetz.ipynb  05_gaussian.ipynb  07_nonlinear_elliptic.ipynb  09_production_runs.ipynb  12_stokes.ipynb  17_navier_stokes.ipynb  conftest.py  generate_tutorials.py  requirements.txt
