[metadata]
name = minirox
version = 0.0.dev1
author = Francesco Ballarin (and contributors)
email = francesco.ballarin@unicatt.it
maintainer = Francesco Ballarin
description = Reduced order modelling tutorials in FEniCSx
url = https://github.com/minirox/minirox
project_urls =
    Homepage = https://github.com/minirox/minirox
    Issues = https://github.com/minirox/minirox/issues
long_description = file: README.md
long_description_content_type = text/markdown
license = LGPL-3.0-or-later
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    License :: OSI Approved :: GNU Lesser General Public License v3 or later (LGPLv3+)
    Operating System :: POSIX
    Operating System :: POSIX :: Linux
    Operating System :: MacOS :: MacOS X
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Scientific/Engineering :: Mathematics
    Topic :: Software Development :: Libraries :: Python Modules

[options]
packages = find:
include_package_data = True
zip_safe = False
python_requires = >= 3.7
setup_requires =
    setuptools >= 58
    wheel
install_requires =
    cppimport
    fenics-dolfinx
    multiphenicsx @ https://github.com/multiphenics/multiphenicsx/archive/refs/heads/main.zip
    mpi4py
    numpy
    petsc4py
    slepc4py

[options.extras_require]
docs =
    sphinx
lint =
    flake8
    flake8-annotations
    flake8-docstrings
    flake8-import-restrictions
    flake8-isort
    flake8-quotes
tests =
    coverage
    nbqa
    pytest
    pytest-xdist
tutorials =
    gmsh
    itkwidgets
    plotly
    pyvista

[flake8]
max-line-length = 120
show-source = True
docstring-convention = numpy
inline-quotes = double
i2041_exclude = __future__, minirox, minirox.*
i2045_include = *
i2045_exclude = __future__, minirox, minirox.*
ignore = ANN101, W503
exclude = .eggs
per-file-ignores =
    minirox/**/__init__.py: F401
    tests/notebooks/data/*.py: D100, I004
    tutorials/0*.py: D100, I004
    tutorials/1*.py: D100, I004

[isort]
line_length = 120
multi_line_output=4
order_by_type=False
