[metadata]
name = RBniCSx
version = 0.0.dev1
author = Francesco Ballarin (and contributors)
email = francesco.ballarin@unicatt.it
maintainer = Francesco Ballarin
description = Reduced order modelling in FEniCSx
url = https://github.com/RBniCS/RBniCSx
project_urls =
    Homepage = https://github.com/RBniCS/RBniCSx
    Issues = https://github.com/RBniCS/RBniCSx/issues
long_description = file: README.md
long_description_content_type = text/markdown
license = LGPL-3.0-or-later
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    License :: OSI Approved :: GNU Lesser General Public License v3 or later (LGPLv3+)
    Operating System :: POSIX
    Operating System :: POSIX :: Linux
    Operating System :: MacOS :: MacOS X
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Scientific/Engineering :: Mathematics
    Topic :: Software Development :: Libraries :: Python Modules

[options]
packages = find:
python_requires = >= 3.7
setup_requires =
    setuptools >= 58
    wheel
install_requires =
    cppimport
    mpi4py
    multipledispatch
    numpy >= 1.21.0
    petsc4py
    slepc4py

[options.package_data]
rbnicsx =
    _cpp/rbnicsx/**/*.cpp
    _cpp/rbnicsx/**/*.h

[options.extras_require]
backends =
    fenics-dolfinx
    multiphenicsx @ git+https://github.com/multiphenics/multiphenicsx.git
    ufl4rom @ git+https://github.com/RBniCS/ufl4rom.git
docs =
    sphinx
lint =
    flake8
    flake8-annotations
    flake8-docstrings
    flake8-import-restrictions
    flake8-isort
    flake8-quotes
tests =
    coverage
    nbqa
    nbvalx[unit_tests] @ git+https://github.com/multiphenics/nbvalx.git
    pytest >= 7.0
    scipy
tutorials =
    rbnicsx[backends]
    gmsh
    itkwidgets
    nbvalx[notebooks] @ git+https://github.com/multiphenics/nbvalx.git
    plotly
    pyvista
colab =
    rbnicsx[backends]
    nbvalx @ git+https://github.com/multiphenics/nbvalx.git

[flake8]
max-line-length = 120
show-source = True
docstring-convention = numpy
inline-quotes = double
i2041_exclude = __future__, rbnicsx, rbnicsx.*
i2045_include = *
i2045_exclude = __future__, rbnicsx, rbnicsx.*
ignore = ANN101, W503
exclude = .eggs, build, dist
per-file-ignores =
    rbnicsx/__init__.py: I001, I004
    rbnicsx/**/__init__.py: F401
    tutorials/0*.py: D100, F401, I004
    tutorials/1*.py: D100, F401, I004
    tutorials/**/0*.py: D100, F401, I004
    tutorials/**/1*.py: D100, F401, I004
    tutorials/.imports*.py: D100, F401, I004
    tutorials/**/.imports*.py: D100, F401, I004

[isort]
line_length = 120
multi_line_output = 4
order_by_type = False
combine_as_imports = True
